changed homepage uyrl

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "adarivamsi.github.io/pbflix",
+  "homepage": "http://adarivamsi.github.io/pbflix",
   "name": "pbflix",
   "version": "0.1.0",
   "private": true,
